Bug 412646: work around layout bug that causes dot to appear in find bar text field, patch by Martijn Wargers <martijn.martijn@gmail.com>, r=me, a=mconnor
UltraBlame original commit: 4aa2d168ffc43e6da4f5db85fe6437ff6ceb6364

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -62,10 +62,6 @@ window[chromehidden~="toolbar"] toolbar:not(.toolbar-primary):not(.chromeclass-m
   min-width: 1px;
 }
 
-#FindToolbar {
-  overflow-x: hidden;
-}
-
 
 #identity-popup-content-box.unknownIdentity > #identity-popup-connectedToLabel ,
 #identity-popup-content-box.unknownIdentity > #identity-popup-runByLabel ,
